# multi-step-AI-process-automation-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
data/: competitors.json  demo_competitors.json  local_prices.json  sample_competitors.json
src/agent/: __init__.py  __main__.py  graph.py  main.py  state.py
src/agent/nodes/: __init__.py  analyzer.py  consolidator.py  reporter.py  scraper.py
src/agent/tools/: __init__.py  email_client.py  slack_client.py  web_scraper.py
src/agent/utils/: config.py  database.py
tests/: conftest.py  test_analyzer.py  test_consolidator.py  test_database.py  test_graph.py  test_state.py  test_tools.py
